Fixed aligns on the nav menu

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,28 +18,34 @@ body {
 
     #nav {
       background: rgba(83, 150, 196, 0.295);
-      height: 5rem;
+      height: 6rem;
       display: flex;
       justify-content: space-between;
 
+      #slide {
+        display: flex;
+        padding: 2.35rem;
+      }
+    
       .red-bar {
+        @extend %center;
         padding: .5rem;
         margin: 0;
         height: 5rem;
-        @extend %center;
         background: $orange;
         border-radius: 0 0 35px 35px;
       }
 
       #login {
-        display: flex;
-        align-items: center;
+        @extend %center;
         background: $orange;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
         font-weight: 700;
         text-transform: uppercase;
-        padding: 0.4rem 1.1rem;
+        padding: 0 3rem;
+        margin-top: 2rem;
+        height: 2.2rem;
         border-radius: 15px 0 0 15px;
       }
 
